--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
 		"dev": "cross-env NODE_ENV=development webpack serve",
 		"build": "cross-env NODE_ENV=production webpack"
 	},
+	"browserslist": [
+		"last 2 version",
+		"> 0.2%",
+		"IE 11"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/surenkov1985/test-task-R52-HTML.git"
@@ -44,6 +49,7 @@
 	},
 	"dependencies": {
 		"autoprefixer": "^10.4.13",
-		"es6-promise": "^4.2.8"
+		"es6-promise": "^4.2.8",
+		"whatwg-fetch": "^3.6.2"
 	}
 }
